<resources>
    <string name="app_name" translatable="false">Antibiotic</string>
    <string name="drugsearch">Drug search</string>
    <string name="drugsearch_entername">Enter name</string>
    <string name="parametric">Test parametric</string>
    <string name="diagnostic">Doctor\'s diagnostic</string>
    <string name="diagnostic_history">Diagnostic History</string>
    <string name="antibiotic_check">Antibiotic check</string>
    <string name="notification">Notification</string>
    <string name="drug_information">Drug Information</string>
    <string name="add">Add</string>
    <string name="check">Check</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disease">Disease name</string>
    <string name="type">Type</string>
    <string name="level">Level</string>
    <string name="record">Record</string>
    <string name="basic">Basic</string>
    <string name="advanced">Advanced</string>
    <string name="blood_type">Blood type</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of birth</string>
    <string name="full_name">Full name</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="signup">Sign up</string>
    <string name="password">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="login">Login</string>
    <string name="liver_func">Liver Function</string>
    <string name="kidney_func">Kidney Function</string>
    <string name="ksd">KSD</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="allergy">Allergy</string>
    <string name="alert_antibiotic">Found 1 dangerous antibiotic</string>
    <string name="penicillin" formatted="false">
        "Phenoxymethyl penicilin (penicilin V) là một penicilin bền vững với acid dịch vị nên được dùng đường uống.

Tên quốc tế: Phenoxymethyl penicillin.

Loại thuốc: Kháng sinh nhóm beta - lactam.

Dạng thuốc và hàm lượng

Viên nén 125 mg, 250 mg, 500 mg có chứa penicilin V kali (tức phenoxymethyl penicilin kali) tương đương với 200.000, 400.000, 800.000 đơn vị penicilin V. Có loại viên nén chứa 1.000.000 đơn vị. Các tá dược thường gặp như natri carboxymethyl cellulose, magnesi stearat và acid stearic, lactose, tinh bột.

Bột 125 mg, 250 mg để pha thành dung dịch uống có chứa penicilin V kali tương đương với 200 000 đơn vị hoặc 400.000 đơn vị/5 ml. Thành phần không hoạt tính thường được dùng bao gồm: Acid citric, natri saccharin, natri benzoat, natri citrat, natri propionat và sacarose.

Phenoxymethyl penicilin 250 mg tương đương với 400.000 đơn vị penicilin.

Tác dụng

Phenoxymethyl penicilin (penicilin V) là một penicilin bền vững với acid dịch vị nên được dùng đường uống. Tác dụng dược lý và cơ chế tác dụng tương tự như benzylpenicilin. Penicilin V có tác dụng tốt trên các cầu khuẩn Gram dương thường gặp như các liên cầu tan huyết nhóm beta, các liên cầu viridans và phế cầu. Thuốc cũng có tác dụng với Staphylococcus (ngoại trừ chủng sinh penicilinase).

Chỉ định

Phenoxymethyl penicilin được dùng tương tự như benzylpenicilin trong điều trị hoặc phòng các nhiễm khuẩn gây ra bởi các vi khuẩn nhạy cảm, đặc biệt là Streptococcus, nhưng chỉ dùng trong điều trị những nhiễm khuẩn nhẹ hoặc trung bình.

Hiện nay, penicilin V được chỉ định trong những nhiễm khuẩn nhẹ đến trung bình như:

Nhiễm khuẩn đường hô hấp trên, viêm họng - amidan, viêm tai giữa.

Nhiễm khuẩn ở miệng, họng.

Viêm phổi thể nhẹ do Pneumococcus.

Nhiễm khuẩn da và mô mềm.

Phòng thấp khớp cấp tái phát.

Ðiều trị cần dựa trên kết quả thử kháng sinh đồ và đáp ứng lâm sàng.

Chống chỉ định

Có tiền sử quá mẫn với penicilin.

Thận trọng

Có dị ứng chéo với các cephalosporin. Trường hợp đã biết có dị ứng với cephalosporin thì không dùng penicilin. Tuy nhiên, nếu có dị ứng với penicilin, thường có thể dùng cephalosporin thay thế.

Nên thận trọng khi dùng penicilin V cho những người bệnh có tiền sử dị ứng hoặc hen.

Nhiễm khuẩn đường hô hấp nặng (như viêm phổi nặng) không thể điều trị bằng penicilin V.

Thời kỳ mang thai

Không thấy có nguy cơ gây hại cho người mang thai.

Thời kỳ cho con bú

Penicilin V có tiết vào sữa mẹ, mặc dù không gây hại nhưng có thể gây phản ứng dị ứng cho trẻ bú mẹ.

Tác dụng phụ

Thường gặp

Ỉa chảy, buồn nôn.

Ngoại ban.

Ít gặp

Tăng bạch cầu ưa eosin.

Nổi mày đay.

Hiếm gặp

Sốc phản vệ.

Ỉa chảy có liên quan tới Clostridium difficile (ít gặp hơn nhiều so với khi dùng ampicilin và amoxicilin).

Xử trí

Ngừng thuốc nếu người bệnh bị ỉa chảy hoặc có phản ứng dị ứng.

Liều lượng và cách dùng

Ðiều trị viêm phổi do Pneumococcus, viêm amidan, viêm họng bởi Streptococcus nhóm A hoặc những nhiễm khuẩn khác do Streptococcus tan huyết nhóm beta:

Người lớn và trẻ em trên 12 tuổi: 250 - 500 mg, 6 - 8 giờ một lần.

Trẻ em dưới 12 tuổi: 25 - 50 mg/kg/ngày, chia làm 3 - 4 lần.

Viêm tai giữa: 25 mg/kg/lần, 2 - 3 lần/ngày. Thời gian điều trị thường là 10 ngày.

Liều điều chỉnh cho người suy thận nặng:

Ðộ thanh thải creatinin trên 10 ml/phút: 250 - 500 mg, 6 giờ một lần.

Ðộ thanh thải creatinin dưới 10 ml/phút: 250 mg, 6 giờ một lần.

Ðể phòng thấp khớp cấp tái phát, có thể dùng liều 250 mg, 2 lần/ngày.

Nên uống thuốc 30 phút trước hoặc 2 giờ sau bữa ăn.

Trường hợp nhiễm H. influenzae (giống như điều trị viêm tai ở trẻ em nói chung): Penicilin V 50 mg/kg thể trọng/24 giờ, chia làm 2 lần. Ðiều trị ít nhất 10 ngày.

Nếu không khỏi, cho amoxicilin và acid clavulanic hoặc một cephalosporin dạng uống hoặc trimethoprim+ sulfamethoxazol. Các kháng sinh nhóm macrolid không được chỉ định trong trường hợp điều trị bằng penicilin không hiệu quả.

Tương tác

Hấp thu của penicilin V bị giảm bởi chất gôm nhựa.

Neomycin dạng uống có thể làm giảm hấp thu của penicilin V tới 50%. Có thể do neomycin gây hội chứng giảm hấp thu có hồi phục.

Bảo quản

Bảo quản thuốc ở nhiệt độ phòng (20 – 350C). "
    </string>
</resources>