<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolBarStyle"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar_functions" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="@dimen/button_width"
                android:text="@string/parametric"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:onClick="parametricTest"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="@dimen/button_width"
                android:text="@string/diagnostic"
                android:layout_marginBottom="@dimen/button_margin"
                android:onClick="diagnostic"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="@dimen/button_width"
                android:text="@string/antibiotic_check"
                android:onClick="antibioticCheck"/>
        </LinearLayout>
</LinearLayout>