<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolBarStyle"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar_diagnostic" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingLeft="@dimen/text_padding"
            android:hint="@string/disease"
            android:id="@+id/disease_name"
            android:gravity="center_vertical"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingLeft="@dimen/text_padding"
            android:hint="@string/type"
            android:id="@+id/disease_type"
            android:gravity="center_vertical"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingLeft="@dimen/text_padding"
            android:hint="@string/level"
            android:id="@+id/disease_level"
            android:gravity="center_vertical"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_gravity="center_horizontal"
            android:text="OK"/>
    </LinearLayout>
</LinearLayout>