<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolBarStyle"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar_parametric_test"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fitsSystemWindows="true">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:paddingBottom="@dimen/activity_vertical_margin"
                      android:paddingLeft="@dimen/activity_horizontal_margin"
                      android:paddingRight="@dimen/activity_horizontal_margin"
                      android:paddingTop="@dimen/activity_vertical_margin"
                      tools:context="vn.edu.usth.antibiotic.Fragment.AdvancedRecordFragment">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_liver_func"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="text"
                          android:hint="@string/liver_func"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_kidney_func"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="text"
                          android:hint="@string/kidney_func"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_ksd"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="text"
                          android:hint="@string/ksd"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_blood_pressure"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="text"
                          android:hint="@string/blood_pressure"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_allergy"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="text"
                          android:hint="@string/allergy"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>