<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="vn.edu.usth.antibiotic.LoginActivity">

        <ImageView android:src="@drawable/pills2"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/login"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:gravity="left"
                android:textSize="16dip"/>
            <TextView
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:gravity="right"
                android:textSize="16dip"/>
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="24dp"-->
            <!--android:orientation="horizontal">-->
            <!--<View-->
                <!--android:layout_width="0px"-->
                <!--android:layout_weight="2"-->
                <!--android:layout_height="2dp"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:background="#000000"/>-->
            <!--<TextView-->
                <!--android:layout_width="0px"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="OR"-->
                <!--android:gravity="center"-->
                <!--android:textSize="16dip"-->
                <!--android:textColor="#000000"/>-->
            <!--<View-->
                <!--android:layout_width="0px"-->
                <!--android:layout_weight="2"-->
                <!--android:layout_height="2dp"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:background="#000000"/>-->
        <!--</LinearLayout>-->

        <!--<com.google.android.gms.common.SignInButton-->
            <!--android:id="@+id/google_signin"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content" />-->

        <!--<com.facebook.login.widget.LoginButton-->
            <!--android:id="@+id/facebook_signin"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<android.support.v7.widget.AppCompatButton-->
            <!--android:id="@+id/google_login"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:padding="12dp"-->
            <!--android:text="Login with Google"/>-->
        <!--<android.support.v7.widget.AppCompatButton-->
            <!--android:id="@+id/facebook_login"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="24dp"-->
            <!--android:layout_marginBottom="24dp"-->
            <!--android:padding="12dp"-->
            <!--android:text="Login with Facebook"/>-->
    </LinearLayout>
</ScrollView>
